update config.ini, .gitignore

--- a/notebooks/config.ini
+++ b/notebooks/config.ini
@@ -1,4 +1,4 @@
 [paths]
-raw_data = C:\Users\thanesh\Desktop\Private\DS Projects\qbe_ds_assessment\data\raw
-interim_data = C:\Users\thanesh\Desktop\Private\DS Projects\qbe_ds_assessment\data\interim
-processed_data = C:\Users\thanesh\Desktop\Private\DS Projects\qbe_ds_assessment\data\processed
+raw_data = C:\Users\thanesh\Desktop\Private\DS Projects\call-volume-forecast\data\raw
+interim_data = C:\Users\thanesh\Desktop\Private\DS Projects\call-volume-forecast\data\interim
+processed_data = C:\Users\thanesh\Desktop\Private\DS Projects\call-volume-forecast\data\processed
